@@ -8,6 +8,7 @@ import warnings
 from collections import OrderedDict
 from rpy2.robjects.robject import RObjectMixin
 import rpy2.rinterface as rinterface
+import rpy2.rinterface_lib.sexp
 from rpy2.robjects import help
 from rpy2.robjects import conversion
 
@@ -26,11 +27,10 @@ __is_null = baseenv_ri.find('is.null')
 
 
 def _formals_fixed(func):
-    tmp = __args(func)
-    if __is_null(tmp)[0]:
-        return rinterface.NULL
-    else:
-        return __formals(tmp)
+    res = __formals(func)
+    if res is rpy2.rinterface_lib.sexp.NULL:
+        res = __formals(__args(func))
+    return res
 
 
 # docstring_property and DocstringProperty
@@ -106,10 +106,11 @@ class Function(RObjectMixin, rinterface.SexpClosure):
                     'R arguments:', ''])
         if fm is rinterface.NULL:
             doc.append('<No information available>')
-        for key, val in zip(fm.do_slot('names'), fm):
-            if key == '...':
-                val = 'R ellipsis (any number of parameters)'
-            doc.append('%s: %s' % (key, _repr_argval(val)))
+        else:
+            for key, val in zip(fm.do_slot('names'), fm):
+                if key == '...':
+                    val = 'R ellipsis (any number of parameters)'
+                doc.append('%s: %s' % (key, _repr_argval(val)))
         return os.linesep.join(doc)
 
     def __call__(self, *args, **kwargs):
@@ -220,18 +221,27 @@ class DocumentedSTFunction(SignatureTranslatedFunction):
 
     @docstring_property(__doc__)
     def __doc__(self):
+        package = help.Package(self.__rpackagename__)
+        page = package.fetch(self.__rname__)
+
         doc = ['Wrapper around an R function.',
                '',
                'The docstring below is built from the R documentation.',
                '']
 
-        description = help.docstring(self.__rpackagename__,
-                                     self.__rname__,
-                                     sections=['\\description'])
-        doc.append(description)
+        if r'\description' in page.sections:
+            doc.append(
+                page.to_docstring(
+                    section_names=[r'\description']
+                )
+            )
 
         fm = _formals_fixed(self)
-        names = fm.do_slot('names')
+        if fm is rpy2.rinterface_lib.sexp.NULL:
+            # If still NULL there is no argument.
+            names = tuple()
+        else:
+            names = fm.do_slot('names')
         doc.append(self.__rname__+'(')
         for key, val in self._prm_translate.items():
             if key == '___':
@@ -244,19 +254,19 @@ class DocumentedSTFunction(SignatureTranslatedFunction):
             else:
                 doc.append('    %s = %s,' % (key, description))
         doc.extend((')', ''))
-        package = help.Package(self.__rpackagename__)
-        page = package.fetch(self.__rname__)
+        ####
         doc.append('Args:')
         for item in page.arguments():
             description = ('%s  ' % os.linesep).join(item.value)
             doc.append(' '.join(('  ', item.name, ': ', description)))
             doc.append('')
 
-        doc.append(
-            help.docstring(self.__rpackagename__,
-                           self.__rname__,
-                           sections=['\\details'])
-        )
+        if r'\details' in page.sections:
+            doc.append(
+                page.to_docstring(
+                    section_names=[r'\details']
+                )
+            )
 
         return os.linesep.join(doc)
 
